# RAG-against-the-machine

./: .flake8  Architecture.md  Contexte.md  Makefile  README.md  interview_prep.md  original_subject.txt  pyproject.toml  subject.txt
data/processed/bm25_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
evaluations/retrieval/2026-07-01_13-29-50/search_results/: results_dataset_code_private.json  results_dataset_docs_private.json
exams/exams_pkg/evaluations/retrieval/2026-06-22_16-48-02/search_results/: results_dataset_code_private.json  results_dataset_docs_private.json
exams/exams_pkg/exams/scripts/: exam_answer.sh  exam_edge_cases.sh  exam_retrieval.sh
src/: main.py  models.py
src/evaluation/: metrics.py
src/generation/: llm_client.py
src/ingestion/: chunker.py  pipeline.py
src/retrieval/: base.py  bm25_engine.py
