[project]
name = "rag-against-the-machine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "bm25s>=0.3.9",
    "faiss-cpu>=1.14.3",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pydantic>=2.13.4",
    "pystemmer>=3.1.0",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
    "tqdm>=4.67.3",
    "transformers>=5.12.1",
]
